adjust video position, fix overflow issues with screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -147,7 +147,6 @@ a {
     justify-content: center;
     align-items: center;
     padding: 12px;
-    border: 1px solid black;
     border-radius: 25px; }
 
 .footer {
@@ -176,30 +175,34 @@ a {
   padding: 12px;
   position: absolute;
   height: 100%;
-  width: 100%;
+  max-width: 100%;
   transition: transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1); }
   .content__screen--video {
-    background: white; }
+    transform: none; }
   .content__screen--project {
-    background: white;
     transform: translateX(100%); }
   .content__screen--interviewees {
-    background: white;
     transform: translateX(-100%); }
   .content__screen--artist {
-    background: white;
     transform: translateX(-100%); }
 
-.content__video {
+.content__videoWrap {
+  position: relative;
   height: 100%;
   width: 100%; }
 
+.content__video {
+  min-width: 100vw;
+  height: 100%; }
+
 body, html {
   height: 100%;
-  background-color: white; }
+  background-color: white;
+  overflow: hidden; }
 
 .wrapper {
   height: inherit;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+  position: relative; }
