--- a/public/scss/components/_content.scss
+++ b/public/scss/components/_content.scss
@@ -8,28 +8,28 @@
     padding: 12px;
     position: absolute;
     height: 100%;
-    width: 100%;
+    max-width: 100%;
     transition: transform 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
     &--video {
-      background: white;
+      transform: none;
     }
     &--project {
-      background: white;
       transform: translateX(100%);
     }
     &--interviewees {
-      background: white;
       transform: translateX(-100%);
     }
     &--artist {
-      background: white;
       transform: translateX(-100%);
     }
-
-
   }
-  &__video {
+  &__videoWrap {
+    position: relative;
     height: 100%;
     width: 100%;
+  }
+  &__video {
+    min-width: 100vw; 
+    height: 100%;
   }
 }
