--- a/public/scss/components/_nav.scss
+++ b/public/scss/components/_nav.scss
@@ -12,7 +12,6 @@
       justify-content: center;
       align-items: center;
       padding: 12px;
-      border: 1px solid black;
       border-radius: 25px;
   }
 }
